objects/Prod_Attr_to_Feat_Jct_c__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Attr_to_Feat_Jct_Number__c</fullName>
        <displayFormat>PAFJ-{000000}</displayFormat>
        <label>Prod Attr to Feature Jct Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Prod Attr to Feature Jcts</relationshipLabel>
        <relationshipName>Prod_Attr_to_Feature_Jcts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Prod Attr to Feature Jcts</relationshipLabel>
        <relationshipName>Prod_Attr_to_Feature_Jcts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Prod_Attr_to_Feat_Jct_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Prod Attr to Feature Jct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prod_Cls_to_Feat_Jct__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Attr to Feature Jcts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>